// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Subpart Subpart Full 1`] = `
<table>
  <tbody>
    <tr>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        2
      </td>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        screw
      </td>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        50
      </td>
      <td
        className="sc-fujyUd jrVGjZ"
      >
        <img
          alt="Subpart with id: 2"
          src="https://www.rifaidate.it/attrezzi/chiodi-e-viti/viti-passo-inglese_O1.jpg"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Subpart Subpart No Img 1`] = `
<table>
  <tbody>
    <tr>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        2
      </td>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        screw lorem ipsum scripta manent verba volant
      </td>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        250
      </td>
      <td
        className="sc-fujyUd jrVGjZ"
      />
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Subpart Subpart No Quantity 1`] = `
<table>
  <tbody>
    <tr>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        2
      </td>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        screw lorem ipsum scripta manent verba volant
      </td>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        1
      </td>
      <td
        className="sc-fujyUd jrVGjZ"
      >
        <img
          alt="Subpart with id: 2"
          src="https://www.rifaidate.it/attrezzi/chiodi-e-viti/viti-passo-inglese_O1.jpg"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Subpart Subpart With Long Name 1`] = `
<table>
  <tbody>
    <tr>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        2
      </td>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        screw lorem ipsum scripta manent verba volant
      </td>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        250
      </td>
      <td
        className="sc-fujyUd jrVGjZ"
      >
        <img
          alt="Subpart with id: 2"
          src="https://www.rifaidate.it/attrezzi/chiodi-e-viti/viti-passo-inglese_O1.jpg"
        />
      </td>
    </tr>
  </tbody>
</table>
`;
